# advent_of_code_2022

./: .gitignore  Cargo.toml  README.md
10/: Cargo.toml
11/: Cargo.toml
11/src/: main.rs
12/: Cargo.toml
12/src/: main.rs
13/: Cargo.toml
13/src/: main.rs
14/: Cargo.toml
14/src/: main.rs
15/: Cargo.toml
15/src/: main.rs
2/part1/: Cargo.toml
2/part2/: Cargo.toml
3/part2/: Cargo.toml
3/part2/src/: main.rs
4/: Cargo.toml
4/src/: main.rs
5/: Cargo.toml
6/: Cargo.toml
6/src/: main.rs
7/: Cargo.toml
7/src/: fs.rs  main.rs
8/: Cargo.toml
8/src/: main.rs
9/: Cargo.toml  make_fake_in
9/src/: main.rs
aoclib/: Cargo.toml
aoclib/src/: grid.rs  point.rs
src/aoclib/: grid.rs  lib.rs  point.rs
