[package]
name = "aoc11"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.29", features = ["derive"] }
itertools = "0.10.5"
once_cell = "1.16.0"
regex = "1.7.0"
