[package]
name = "aoc15"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
aoclib = { version = "0.1.0", path = "../aoclib" }
clap = { version = "4.0.29", features = ["derive"] }
env_logger = "0.10.0"
itertools = "0.10.5"
log = "0.4.17"
nom = "7.1.1"
